[package]
name = "geode-finder"
version = "2.0.0"
edition = "2024"
description = "Tool to search for geodes and budding amethyst clusters in a Minecraft world"
repository = "https://github.com/soulsoiledit/geode-finder"
license = "MIT"
keywords = ["minecraft", "amethyst", "geode", "finder", "search"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
indicatif = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
statrs = "0.18.0"
